# verdure

./: .gitattributes  Cargo.toml  README-zh_cn.md  README.md  deny.toml
verdure/: Cargo.toml
verdure-context/: Cargo.toml
verdure-context/src/: config.rs  context.rs  error.rs  event.rs  lib.rs  profile.rs
verdure-core/: Cargo.toml
verdure-core/src/: error.rs  lib.rs
verdure-core/src/error/: component.rs  container.rs
verdure-ioc/: Cargo.toml
verdure-ioc/src/: component.rs  container.rs  event.rs  lib.rs
verdure-ioc/src/component/: factory.rs
verdure-macros/: Cargo.toml
verdure-macros/src/: component.rs  configuration.rs  lib.rs
verdure-macros/tests/: integration_component_test.rs  integration_configuration_test.rs  integration_test.rs
verdure/src/: lib.rs
