[package]
name = "verdure-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
verdure-ioc = { workspace = true }
dashmap = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_yaml = "0.9"
parking_lot = "0.12"
inventory = { workspace = true }
[features]
default = []
