[package]
name = "verdure-ioc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
verdure-core = { workspace = true }
inventory = { workspace = true }
dashmap = { workspace = true }
