[package]
name = "verdure-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
[lib]
proc-macro = true

[dependencies]
proc-macro2 = {workspace = true}
quote = {workspace = true}
syn = {workspace = true}

[dev-dependencies]
inventory = "0.3"
verdure-ioc = {path = "../verdure-ioc"}