[package]
name = "verdure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
verdure-core = { path = "../verdure-core" }
verdure-ioc = { path = "../verdure-ioc" }
verdure-macros = { path = "../verdure-macros" }
